fix overflow issue

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -110,7 +110,7 @@
     display: block;
     margin: 20px auto 0 auto;
     width: 124px;
-								
+		letter-spacing: 0px;
 						
 		 
   }
